--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,10 +13,10 @@
       <li><a href="https://github.com/{{ site.author.github }}"><i class="fab fa-fw fa-github" aria-hidden="true"></i> GitHub</a></li>
     {% endif %}
     {% if site.author.zindi %}
-      <li><a href="https://zindi.com/{{ site.author.zindi }}"><i class="fab fa-fw fa-computer" aria-hidden="true"></i> Zindi</a></li>
+      <li><a href="http://zindi.africa/users/{{ site.author.zindi }}"><i class="fab fa-fw fa-television" aria-hidden="true"></i> Zindi</a></li>
     {% endif %}
     {% if site.author.kaggle %}
-      <li><a href="https://kaggle.com/{{ site.author.kaggle }}"><i class="fab fa-fw fa-bitbucket" aria-hidden="true"></i> Kaggle</a></li>
+      <li><a href="https://kaggle.com/{{ site.author.kaggle }}"><i class="fab fa-fw fa-kaggle" aria-hidden="true"></i> Kaggle</a></li>
     {% endif %}
     <li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | absolute_url }}{% endif %}"><i class="fas fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a></li>
   </ul>
